hphp/test/slow/reified-generics/param-warn-3.php.expectf
done

Warning: Argument 1 passed to f() must be an instance of B<@C<@int>>, B<C<string>> given in %s on line 6
done

Warning: Argument 1 passed to f() must be an instance of B<@C<@int>>, B<B<int>> given in %s on line 6
done
done

Warning: Argument 1 passed to g() must be an instance of B<C<@int>>, B<C<string>> given in %s on line 7
done

Catchable fatal error: Argument 1 passed to g() must be an instance of B<C<@int>>, B<B<int>> given in %s on line 15
